--- a/package.json
+++ b/package.json
@@ -6,16 +6,14 @@
     "typecheck": "pnpm -r typecheck",
     "lint": "pnpm -r lint",
     "test": "pnpm -r test",
-    "postinstall": "simple-git-hooks",
-    "release": "standard-version"
+    "postinstall": "simple-git-hooks"
   },
   "devDependencies": {
     "@initia/eslint-config-react-app": "^1",
     "eslint": "^9",
     "lint-staged": "^16",
     "prettier": "^3",
-    "simple-git-hooks": "^2",
-    "standard-version": "^9"
+    "simple-git-hooks": "^2"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged --concurrent false"
