feat(component): implement notification system

--- a/packages/widget-react/package.json
+++ b/packages/widget-react/package.json
@@ -49,6 +49,7 @@
     "ethers": "^6",
     "jotai": "^2",
     "ky": "^1",
+    "nanoid": "^5",
     "radix-ui": "^1",
     "ramda": "^0",
     "react": "^19",
@@ -97,6 +98,7 @@
     "ethers": "^6",
     "jotai": "^2",
     "ky": "^1",
+    "nanoid": "^5",
     "postcss": "^8",
     "radix-ui": "^1",
     "ramda": "^0",
