--- a/examples/vite/package.json
+++ b/examples/vite/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5",
     "cosmjs-types": "^0",
     "ethers": "^6",
+    "jotai": "^2",
     "react": "^19",
     "react-dom": "^19",
     "react-hook-form": "^7",
