--- a/packages/widget-react/package.json
+++ b/packages/widget-react/package.json
@@ -60,6 +60,7 @@
     "react-intersection-observer": "^9",
     "react-merge-refs": "^3",
     "react-use": "^17",
+    "wagmi": "^2",
     "xss": "^1",
     "zod": "^3"
   },
@@ -114,6 +115,7 @@
     "vite": "^6",
     "vite-plugin-dts": "^4",
     "vitest": "^3",
+    "wagmi": "^2",
     "xss": "^1",
     "zod": "^3"
   }
