--- a/packages/widget-react/tsconfig.json
+++ b/packages/widget-react/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": { "@/*": ["src/*"] },
-    "lib": ["ESNext", "DOM"]
+    "lib": ["ESNext", "DOM"],
+    "erasableSyntaxOnly": false
   },
   "exclude": ["dist"]
 }
