--- a/packages/widget-react/package.json
+++ b/packages/widget-react/package.json
@@ -39,6 +39,8 @@
     "@lukemorales/query-key-factory": "^1",
     "@mysten/bcs": "^1",
     "@noble/hashes": "^1",
+    "@privy-io/cross-app-connect": "^0",
+    "@rainbow-me/rainbowkit": "^2",
     "@react-spring/web": "^10",
     "@tanstack/react-query": "^5",
     "bignumber.js": "^9",
@@ -60,6 +62,7 @@
     "react-intersection-observer": "^9",
     "react-merge-refs": "^3",
     "react-use": "^17",
+    "viem": "^2",
     "wagmi": "^2",
     "xss": "^1",
     "zod": "^3"
@@ -81,6 +84,8 @@
     "@lukemorales/query-key-factory": "^1",
     "@mysten/bcs": "^1",
     "@noble/hashes": "^1",
+    "@privy-io/cross-app-connect": "^0",
+    "@rainbow-me/rainbowkit": "^2",
     "@react-spring/web": "^10",
     "@skip-go/client": "^1",
     "@tanstack/react-query": "^5",
@@ -112,6 +117,7 @@
     "react-use": "^17",
     "standard-version": "^9",
     "typescript": "^5",
+    "viem": "^2",
     "vite": "^6",
     "vite-plugin-dts": "^4",
     "vitest": "^3",
