--- a/packages/widget-react/package.json
+++ b/packages/widget-react/package.json
@@ -35,6 +35,7 @@
     "@hookform/resolvers": "^5",
     "@initia/amino-converter": "^1",
     "@initia/icons-react": "^1",
+    "@initia/initia.proto": "^1",
     "@initia/opinit.proto": "^1",
     "@lukemorales/query-key-factory": "^1",
     "@mysten/bcs": "^1",
@@ -79,6 +80,7 @@
     "@initia/amino-converter": "^1",
     "@initia/icons-react": "^1",
     "@initia/initia-registry-types": "^1",
+    "@initia/initia.proto": "^1",
     "@initia/opinit.proto": "^1",
     "@keplr-wallet/types": "^0",
     "@lukemorales/query-key-factory": "^1",
