--- a/packages/widget-react/package.json
+++ b/packages/widget-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@initia/widget-react",
-  "version": "2.0.0-alpha.9",
+  "version": "2.0.0-rc.0",
   "repository": "github:initia-labs/widget",
   "type": "module",
   "types": "dist/index.d.ts",
