--- a/packages/widget-react/package.json
+++ b/packages/widget-react/package.json
@@ -2,11 +2,20 @@
   "name": "@initia/widget-react",
   "version": "2.0.0-rc.0",
   "repository": "github:initia-labs/widget",
-  "type": "module",
-  "types": "dist/index.d.ts",
-  "module": "dist/index.js",
+  "main": "./dist/index.cjs.js",
+  "module": "./dist/index.es.js",
+  "types": "./dist/index.d.ts",
   "exports": {
-    ".": "./dist/index.js",
+    ".": {
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.es.js"
+      },
+      "require": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.cjs.js"
+      }
+    },
     "./styles.css": "./dist/styles.css",
     "./styles.js": "./dist/styles.js"
   },
