--- a/packages/widget-react/package.json
+++ b/packages/widget-react/package.json
@@ -3,10 +3,15 @@
   "version": "2.0.0-rc.0",
   "repository": "github:initia-labs/widget",
   "type": "module",
-  "types": "dist/index.d.ts",
-  "module": "dist/index.js",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
-    ".": "./dist/index.js",
+    ".": {
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
     "./styles.css": "./dist/styles.css",
     "./styles.js": "./dist/styles.js"
   },
