--- a/packages/interwovenkit-react/package.json
+++ b/packages/interwovenkit-react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@initia/widget-react",
   "version": "2.0.0-rc.0",
-  "repository": "github:initia-labs/widget",
+  "repository": "github:initia-labs/interwovenkit",
   "type": "module",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
